[package]
name = "arm-semihosting"
version = "0.1.0"
edition = "2021"
authors = ["Javier Alvarez <javier.alvarez@allthingsembedded.net>"]
description = "Semihosting implementation targeting aarch64 and arm32 architectures."
keywords = ["semihosting", "aarch64", "arm32"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/Javier-varez/arm_semihosting"

[features]
default = []

[dependencies]
cstr_core = "0.2.5"
